Style: Fix more overlap with Nuxt UI

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -24,6 +24,14 @@ body {
     background-image: none;
     background-color: rgba(1, 1, 1, 0.5);
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: bold;
+}
 a {
     text-decoration: none;
     color: var(--primary-500);
